Fix flexbox alignment

--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,6 @@ html, body {
 
 .app-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   height: 100%;
 }
